--- a/application.properties
+++ b/application.properties
@@ -5,8 +5,8 @@
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 #
 
-test.val1=mario
-test.val2=rista
+test.val1=Mario
+test.val2=_RISTA
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 #spring.datasource.url=jdbc:mysql://localhost:3306/tets_test
