--- a/application.properties
+++ b/application.properties
@@ -6,7 +6,7 @@
 #
 
 test.val1=Mario_123
-test.val2=_RISTA_123
+test.val2=_RISTA_123_456
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 #spring.datasource.url=jdbc:mysql://localhost:3306/tets_test
