--- a/application.properties
+++ b/application.properties
@@ -5,7 +5,7 @@
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 #
 
-test.val1=Mario_123
+test.val1=Mario_123_456_789
 test.val2=_RISTA_123_456
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
