--- a/application.properties
+++ b/application.properties
@@ -5,8 +5,8 @@
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 #
 
-test.val1=Aimar
-test.val2= Diego pablo
+test.val1=Aimar__Aimar
+test.val2= Diego pablo_Aimar
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 #spring.datasource.url=jdbc:mysql://localhost:3306/tets_test
