--- a/application.properties
+++ b/application.properties
@@ -5,8 +5,8 @@
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 #
 
-test.val1=Aimar__Aimarsdfgdfgsd
-test.val2= Diego pablo_Aimarsdfgsdfgsdfgs
+test.val1=Mario_1
+test.val2=Rista_1
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 #spring.datasource.url=jdbc:mysql://localhost:3306/tets_test
