--- a/application.properties
+++ b/application.properties
@@ -8,6 +8,8 @@
 test.val1=Mario_2
 test.val2=Rista_2
 
+minWeekPlayed=4
+
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 #spring.datasource.url=jdbc:mysql://localhost:3306/tets_test
 spring.datasource.url=jdbc:mysql://localhost:3306/dev
