--- a/application.properties
+++ b/application.properties
@@ -4,7 +4,7 @@
 #eureka.instance.hostname=localhost
 #eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 #
-
+minWeekPlayed=4
 test.val1=Mario_2
 test.val2=Rista_2
 
